--- a/Kubernetes/snippets/pod.yaml
+++ b/Kubernetes/snippets/pod.yaml
@@ -14,8 +14,6 @@ spec:
       ports:
         - containerPort: 80
 
-
-
 ///////////////////////////////////////////
 // Pod with 2 containers (sidecar pattern)
 ///////////////////////////////////////////
@@ -23,6 +21,8 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: multi-container-pod
+  labels:
+    app: multi-container
 spec:
   containers:
     - name: app-container
@@ -32,7 +32,6 @@ spec:
       image: busybox
       command: ["sh", "-c", "echo 'Hello from Sidecar' && sleep 3600"]
 
-
 ///////////////////////////////////////////
 // Pod with environment variables
 ///////////////////////////////////////////
@@ -40,6 +39,8 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: env-pod
+  labels:
+    app: env-app
 spec:
   containers:
     - name: env-container
@@ -48,6 +49,3 @@ spec:
       env:
         - name: MY_VAR
           value: "Hello, Kubernetes!"
-
-
-
