--- a/Kubernetes/snippets/replicaset.yaml
+++ b/Kubernetes/snippets/replicaset.yaml
@@ -1,57 +1,21 @@
 ///////////////////////////////////////////
-// Simple Pod with Nginx
+// Minimal Replication Controller
 ///////////////////////////////////////////
 apiVersion: v1
-kind: Pod
+kind: ReplicationController
 metadata:
-  name: nginx-pod
-  labels:
+  name: nginx-rc
+spec:
+  replicas: 3
+  selector:
     app: nginx
-    tier: frontend
-    env: production
-spec:
-  containers:
-    - name: nginx
-      image: nginx:latest
-      ports:
+  template:
+    metadata:
+      labels:
+        app: nginx
+    spec:
+      containers:
+      - name: nginx
+        image: nginx:latest
+        ports:
         - containerPort: 80
-
-///////////////////////////////////////////
-// Pod with 2 containers (sidecar pattern)
-///////////////////////////////////////////
-apiVersion: v1
-kind: Pod
-metadata:
-  name: multi-container-pod
-  labels:
-    app: multi-container
-    tier: backend
-    env: staging
-spec:
-  containers:
-    - name: app-container
-      image: busybox
-      command: ["sh", "-c", "echo 'Hello from App' && sleep 3600"]
-    - name: sidecar-container
-      image: busybox
-      command: ["sh", "-c", "echo 'Hello from Sidecar' && sleep 3600"]
-
-///////////////////////////////////////////
-// Pod with environment variables
-///////////////////////////////////////////
-apiVersion: v1
-kind: Pod
-metadata:
-  name: env-pod
-  labels:
-    app: env-app
-    tier: database
-    env: development
-spec:
-  containers:
-    - name: env-container
-      image: busybox
-      command: ["sh", "-c", "env && sleep 3600"]
-      env:
-        - name: MY_VAR
-          value: "Hello, Kubernetes!"
