--- a/Kubernetes/snippets/pod.yaml
+++ b/Kubernetes/snippets/pod.yaml
@@ -115,6 +115,51 @@ spec:
 
 
 #############################################
+## Pod with multiple containers
+#############################################
+apiVersion: v1
+kind: Pod
+metadata:
+  name: multi-container-pod
+spec:
+  containers:
+    - name: container-1
+      image: nginx:latest
+      volumeMounts:
+        - name: shared-volume
+          mountPath: /usr/share/nginx/html
+    - name: container-2
+      image: busybox:latest
+      command: [ "sh", "-c", "while true; do echo 'Hello from container-2' >> /mnt/data/message.txt; sleep 5; done" ]
+      volumeMounts:
+        - name: shared-volume
+          mountPath: /mnt/data
+  volumes:
+    - name: shared-volume
+      emptyDir: {}
+
+
+#############################################
+## Pod with init container
+#############################################
+apiVersion: v1
+kind: Pod
+metadata:
+  name: myapp-pod
+  labels:
+    app: myapp
+spec:
+  containers:
+  - name: myapp-container
+    image: busybox:1.28
+    command: ['sh', '-c', 'echo The app is running! && sleep 3600']
+  initContainers:
+  - name: init-myservice
+    image: busybox
+    command: ['sh', '-c', 'git clone <some-repository-that-will-be-used-by-application> ; done;']
+
+
+#############################################
 ## Pod with override command, completely replacing the image’s default ENTRYPOINT
 #############################################
 apiVersion: v1
