--- a/Kubernetes/snippets/Deployment.yaml
+++ b/Kubernetes/snippets/Deployment.yaml
@@ -151,3 +151,41 @@ spec:
               port: 80
             initialDelaySeconds: 5
             periodSeconds: 10
+
+
+#############################################
+## Deployment with in place Pod vertical scaling (no delete of existing pods)
+#############################################
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: nginx
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: nginx
+  template:
+    metadata:
+      labels:
+        app: nginx
+    spec:
+      containers:
+      - name: nginx
+        image: nginx
+        ports:
+        - containerPort: 80
+        resources:
+          requests:
+            cpu: "100m"
+            memory: "128Mi"
+          limits:
+            cpu: "200m"
+            memory: "256Mi"
+          resizePolicy:
+          - resourceName: cpu
+            restartPolicy: "NotRequired"
+          - resourceName: memory
+            restartPolicy: "NotRequired"
+
+# $ FEATURE_GATES=InPlacePodVerticalScaling=true    //apply this directive before
