adding kubeapi file

--- a/Kubernetes/snippets/Kubeconfig.yaml
+++ b/Kubernetes/snippets/Kubeconfig.yaml
@@ -6,6 +6,7 @@ clusters:
   cluster:
     server: https://dev-cluster.example.com
     certificate-authority: /path/to/dev-cluster/ca.crt
+    # certificate-authority-data: <base64 encoded hash>
 - name: prod-cluster
   cluster:
     server: https://prod-cluster.example.com
@@ -26,6 +27,7 @@ contexts:
   context:
     cluster: dev-cluster
     user: dev-user
+    namespace: finance   #optionally you can set the default namespace
 - name: prod-context
   context:
     cluster: prod-cluster
